<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical|top"
            android:orientation="horizontal"
            android:padding="1dp">

            <RadioButton
                android:id="@+id/rb_home"
                style="@style/style_RadioButton"
                android:layout_marginTop="5dp"
                android:drawableTop="@drawable/tab_home"
                android:text="@string/tab_home"
                android:textColor="@drawable/tab_main_color" />

            <RadioButton
                android:id="@+id/rb_matter"
                style="@style/style_RadioButton"
                android:layout_marginTop="5dp"
                android:drawableTop="@drawable/tab_matters"
                android:text="@string/tab_matter"
                android:textColor="@drawable/tab_main_color"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rb_news"
                style="@style/style_RadioButton"
                android:layout_marginTop="5dp"
                android:drawableTop="@drawable/tab_case"
                android:text="@string/tab_news"
                android:textColor="@drawable/tab_main_color" />

            <RadioButton
                android:id="@+id/rb_mine"
                style="@style/style_RadioButton"
                android:layout_marginTop="5dp"
                android:drawableTop="@drawable/tab_mine"
                android:text="@string/tab_mine"
                android:textColor="@drawable/tab_main_color" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>
