<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/head_detail" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rl_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/base_color1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="10dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="10dip">

                <ImageView
                    android:id="@+id/iv_user_pic"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="登录"
                    android:textColor="#FF666666"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/base_color1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="10dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="10dip"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_user_phone"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="123456"
                    android:textColor="#FF666666"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/ll_my_business"
                style="@style/mine_ll_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:src="@drawable/icon_mine_wdyw" />

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dp"
                    android:layout_weight="1.0"
                    android:text="@string/my_business"
                    android:textSize="@dimen/title_textSize" />

                <ImageView style="@style/image_clickable_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/ll_friend_recommend"
                style="@style/mine_ll_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:src="@drawable/icon_mine_hytj" />

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dp"
                    android:layout_weight="1.0"
                    android:text="@string/friend_recommend"
                    android:textSize="@dimen/title_textSize" />

                <ImageView style="@style/image_clickable_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />


            <LinearLayout
                android:id="@+id/ll_feed_back"
                style="@style/mine_ll_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:src="@drawable/icon_mine_yjfk" />

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dp"
                    android:layout_weight="1.0"
                    android:text="@string/feed_back"
                    android:textSize="@dimen/title_textSize" />

                <ImageView style="@style/image_clickable_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/ll_sys_set"
                style="@style/mine_ll_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:src="@drawable/icon_mine_xtsz" />

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dp"
                    android:layout_weight="1.0"
                    android:text="@string/sys_setting"
                    android:textSize="@dimen/title_textSize" />

                <ImageView style="@style/image_clickable_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/ll_new_guide"
                style="@style/mine_ll_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:src="@drawable/icon_mine_xsyd" />

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dp"
                    android:layout_weight="1.0"
                    android:text="@string/guide"
                    android:textSize="@dimen/title_textSize" />

                <ImageView style="@style/image_clickable_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/ll_check_version"
                style="@style/mine_ll_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:src="@drawable/icon_mine_gz" />

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dp"
                    android:layout_weight="1.0"
                    android:text="@string/check_version"
                    android:textSize="@dimen/title_textSize" />

                <ImageView style="@style/image_clickable_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/ll_about_help"
                style="@style/mine_ll_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:src="@drawable/icon_mine_gubz" />

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dp"
                    android:layout_weight="1.0"
                    android:text="@string/about_help"
                    android:textSize="@dimen/title_textSize" />

                <ImageView style="@style/image_clickable_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="25dp"
                android:background="@color/gray" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
